Fixing broken layout for switch

--- a/src/app/views/hub/hub.component.scss
+++ b/src/app/views/hub/hub.component.scss
@@ -20,14 +20,6 @@ h1{
 .iconColumn .fa-warning{
   color: #dc3545;
 }
-.checkbox-wrapper-inline{
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-  max-width: 3em;
-  border: 1px solid #e4e7ea;
-}
 .checkbox-wrapper{
   flex: 1;
   border-top-right-radius: 0.25rem;
